--- a/css/styles.css
+++ b/css/styles.css
@@ -273,6 +273,7 @@ body .demo-blog {
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: stretch;
+	position: relative;
 }
 
 .demo-blog--blogpost .comments>form {
@@ -470,7 +471,6 @@ body .demo-blog {
 	text-decoration: none;
     text-align: center;
 }
-
 .footer-develop-a{
     color: #9e9e9e;
     text-decoration:none;
@@ -499,6 +499,11 @@ body .demo-blog {
     margin-left:auto;
     margin-right:auto;
     text-align: center;
+}
+.author-name-span a,
+.visitor-name-span a{
+	font-weight: 400;
+	text-decoration: none;
 }
 .mdl-mini-footer--right-section{
     margin-right: 60px;
@@ -533,10 +538,20 @@ body .demo-blog {
 	font-size: 13px;
     font-weight: 400 !important;
 }
+.comment-share-list-a{
+	text-decoration: none;
+}
 #comment__avatar{
 	margin-right: 1pc;
 	width: 48px;
 	height: 48px;
+	border-radius: 50%;
+	overflow: hidden;
+}
+#author-avatar{
+	margin-right: 1pc;
+	width: 44px;
+	height: 44px;
 	border-radius: 50%;
 	overflow: hidden;
 }
@@ -555,7 +570,16 @@ body .demo-blog {
 	background-color: rgba(0, 0, 0, 0.24);
 	color: #FFF;
 }
-
+#article-functions-viewtags-ul li{
+	padding: 0;
+}
+#article-functions-viewtags-ul a{
+	padding-left: 30px;
+	padding-right: 55px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	text-decoration: none;
+}
 @media screen and (max-width: 850px){
 	#comment-input-div{
 		width: 93%;
@@ -574,5 +598,16 @@ body .demo-blog {
 @media screen and (max-width: 550px){
 	#comment-input-div{
 		width: 80%;
+	}
+}
+@media screen and (max-width: 480px){
+	.footer-develop-div{
+		float: left;
+		margin-right: 10px;
+	}
+	.mdl-mini-footer--right-section{
+		margin-left:auto;
+		margin-right:auto;
+		text-align: center;
 	}
 }
