--- a/css/material.icon.css
+++ b/css/material.icon.css
@@ -2,7 +2,7 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: local('Material Icons'), local('MaterialIcons-Regular'), url(https://fonts.gstatic.com/s/materialicons/v12/2fcrYFNaTjcS6g4U3t-Y5UEw0lE80llgEseQY3FEmqw.woff2) format('woff2');
+  src: local('Material Icons'), local('MaterialIcons-Regular'), url(../fonts/MaterialDesign-Icons.woff2) format('woff2');
 }
 
 .material-icons {
