--- a/css/style.css
+++ b/css/style.css
@@ -345,7 +345,7 @@ body .demo-blog {
 	position: fixed;;
 	top: 5pc;
 	left: 1pc;
-	z-index: -1;
+	z-index: 997;
 	color: #fff;
 }
 
@@ -633,11 +633,9 @@ blockquote {
 			top: 50%;
 			width: 7px;
 			height: 1.25em;
-			margin-left: -12px;
+			margin-left: -7px;
 			margin-top: -1.25em;
 			background-color: #009688;
-			z-index: 100;
-			border-right: 7px solid #F6F6F6;
 		}
 		h2{
 			background-color: #F6F6F6;
@@ -653,11 +651,9 @@ blockquote {
 			top: 50%;
 			width: 6px;
 			height: 1.25em;
-			margin-left: -12px;
+			margin-left: -6px;
 			margin-top: -1.25em;
 			background-color: #00BCD4;
-			z-index: 100;
-			border-right: 6px solid #F6F6F6;
 		}
 		h3{
 			background-color: #F6F6F6;
@@ -672,10 +668,9 @@ blockquote {
 			top: 50%;
 			width: 5px;
 			height: 1.3em;
-			margin-left: -10px;
+			margin-left: -5px;
 			margin-top: -1.3em;
 			background-color: #8BC34A;
-			border-right: 5px solid #F6F6F6;
 		}
 		h4{
 			background-color: #F6F6F6;
@@ -690,10 +685,9 @@ blockquote {
 			top: 50%;
 			width: 4px;
 			height: 1.35em;
-			margin-left: -8px;
+			margin-left: -4px;
 			margin-top: -1.35em;
 			background-color: #E91E63;
-			border-right: 4px solid #F6F6F6;
 		}
 		h5{
 			background-color: #F6F6F6;
@@ -708,10 +702,9 @@ blockquote {
 			top: 50%;
 			width: 3px;
 			height: 1.5em;
-			margin-left: -6px;
+			margin-left: -3px;
 			margin-top: -1.5em;
 			background-color: #9C27B0;
-			border-right: 3px solid #F6F6F6;
 		}
 		h6{
 			background-color: #F6F6F6;
@@ -726,10 +719,9 @@ blockquote {
 			top: 50%;
 			width: 2px;
 			height: 1.6em;
-			margin-left: -4px;
+			margin-left: -2px;
 			margin-top: -1.6em;
 			background-color: #CDDC39;
-			border-right: 2px solid #F6F6F6;
 		}
 .article-headline-p{
 	font-size: 34px;
@@ -760,4 +752,10 @@ blockquote {
 }
 #search-form{
 	bottom:45px;
+}
+#search-form-label{
+	left: 1px;
+}
+#search-form-label:after{
+    background-color: #ff4081;
 }
