--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,15 @@
+html {
+    height: 100%;
+}
 body {
+    margin: 0;
+    padding: 0;
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     z-index: -1;
-    background-image: url(../img/bg.jpg);
     background-size: cover;
     background-attachment: fixed;
     content: '';
