--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ body .demo-blog {
     font-weight: 400;
     margin: 0;
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    text-shadow: 1px 1px 6px #111;
 }
 
 .index-top-block-slogan a{
@@ -860,6 +861,7 @@ h6 {
     font-weight: 400;
     margin: 0;
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    text-shadow: 1px 1px 8px #111;
 }
 .article-headline-p a,
 .article-headline-p-top a {
