--- a/css/style.css
+++ b/css/style.css
@@ -999,6 +999,16 @@ h6 {
     width: 100%;
 }
 
+.mdl-badge[data-badge]:after {
+    width: 20px;
+    height: 20px;
+}
+
+.mdl-button .mdl-badge[data-badge]:after{
+    top: -12px;
+    right: -10px;
+}
+
 /***************************************************************************************************/
 /**********************************                               **********************************/
 /**********************************          Sidebar CSS          **********************************/
